--- a/BMI Calc/Resources/layout/activity_main.axml
+++ b/BMI Calc/Resources/layout/activity_main.axml
@@ -4,29 +4,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+	<GridLayout
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:rowCount = "5"
+		android:columnCount = "2">
+		<TextView
+			android:text="Height(m)"
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:id="@+id/tvHeight"
+			android:textSize="20dp" />
+		<EditText
+			android:inputType="numberDecimal"
+			android:id="@+id/etHeight"/>
+		<TextView
+			android:text="Weight(Kg)"
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:id="@+id/tvWeight"
+			android:textSize="20dp" />
+		<EditText
+			android:inputType="numberDecimal"
+			android:id="@+id/etWeight"/>
+		<Button
+			android:text="Convert"
+			android:id="@+id/btnConv" />
+		<Button
+			android:text="Clear"
+			android:id="@+id/btnClr" />
+		<TextView
+			android:text="Your BMI is "
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:id="@+id/tvResult1"
+			android:textSize="20dp" />
+		<EditText
+			android:inputType="numberDecimal"
+			android:id="@+id/etResult1"/>
+		<TextView
+			android:text="You are "
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:id="@+id/tvResult2"
+			android:textSize="20dp" />
+		<EditText
+			android:inputType="textPersonName"
+			android:id="@+id/etResult2"/>
+	</GridLayout>
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_main" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+   
 
 </android.support.design.widget.CoordinatorLayout>
